force-app/main/default/objects/Opportunity/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>Project_Number__r.Project_Number__c</formula>
    <label>Project Number</label>
    <type>Text</type>
</CustomField>