force-app/main/default/objects/Opportunity/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <description>Indicates the Project Type (= salestori customergroup)</description>
    <inlineHelpText>The Project Type</inlineHelpText>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Project_Categories</valueSetName>
    </valueSet>
</CustomField>