force-app/main/default/objects/Opportunity/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Project number for the order</description>
    <label>Project OLD</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>