force-app/main/default/objects/Opportunity/fields/ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ProjectNumber__c</fullName>
    <description>The Identifier of the Project in Salestori</description>
    <externalId>true</externalId>
    <inlineHelpText>The Identifier of the Project in Salestori</inlineHelpText>
    <label>Project Number</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>