force-app/main/default/objects/Opportunity/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <description>Indicates the Project Type (= salestori customergroup)</description>
    <inlineHelpText>The Project Type</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Project_Types</valueSetName>
    </valueSet>
</CustomField>