force-app/main/default/objects/Opportunity/fields/Promised_Date__c.field-meta.xml
<CustomField>
    <fullName>Promised_Date__c</fullName>
    <formula>TEXT(Delivery_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promised Date</label>
    <type>Text</type>
</CustomField>