force-app/main/default/objects/Opportunity/fields/Promised_Week__c.field-meta.xml
<CustomField>
    <fullName>Promised_Week__c</fullName>
    <formula>Delivery_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promised Week OLD</label>
    <type>Text</type>
</CustomField>