force-app/main/default/objects/Opportunity/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>The Type of Building</description>
    <inlineHelpText>The Type of Building</inlineHelpText>
    <label>Property Type OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Property_Types</valueSetName>
    </valueSet>
</CustomField>