force-app/main/default/objects/Opportunity/fields/Property_Type_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Property_Type_Attribute__c</fullName>
    <description>Level 6 Classification based on Property Type</description>
    <formula>Text(Property_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Level 6 Classification based on Property Type</inlineHelpText>
    <label>Property Type Attribute</label>
    <type>Text</type>
</CustomField>