force-app/main/default/objects/Opportunity/fields/Quote_base_data_filled__c.field-meta.xml
<CustomField>
    <fullName>Quote_base_data_filled__c</fullName>
    <description>used in conditional visibility for quote component</description>
    <formula>(Structural_Information_Filled__c = true )
&amp;&amp;
NOT ( ISBLANK(TEXT(Payment_Plan__c )))
&amp;&amp;
NOT (ISBLANK(TEXT(  Invoice_type__c )))
&amp;&amp;
NOT (ISBLANK( Delivery_Location__c ))
&amp;&amp;
( Quote_Status__c = &quot;Price&quot; ||  Quote_Status__c = &quot;Quote&quot; )</formula>
    <label>Quote base data filled OLD</label>
    <type>Checkbox</type>
</CustomField>