force-app/main/default/objects/Opportunity/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <description>The Status of the Synced Quote</description>
    <formula>Text(SyncedQuote.Status)</formula>
    <inlineHelpText>The Status of the Synced Quote
Configure - Add/Edit Products and Configurations
Price - Edit Prices
Quote - Ready for Document Generation</inlineHelpText>
    <label>Quote Status OLD</label>
    <type>Text</type>
</CustomField>