force-app/main/default/objects/Opportunity/fields/Reason_for_preliminary_contract__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_preliminary_contract__c</fullName>
    <description>This field defines reason why preliminary contract is needed</description>
    <inlineHelpText>Please state why preliminary contract is needed</inlineHelpText>
    <label>Reason for Preliminary Contract OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Permit</fullName>
            </value>
            <value>
                <fullName>Special Order</fullName>
            </value>
            <value>
                <fullName>2nd measurement needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>