force-app/main/default/objects/Opportunity/fields/Sales_reference__c.field-meta.xml
<CustomField>
    <fullName>Sales_reference__c</fullName>
    <description>Sales Order number (8 digits number, previsously 50XXXXXX)</description>
    <displayFormat>{00000000}</displayFormat>
    <inlineHelpText>Sales Order number</inlineHelpText>
    <label>Sales reference</label>
    <type>AutoNumber</type>
</CustomField>