force-app/main/default/objects/Opportunity/fields/Sales_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Visit_Date__c</fullName>
    <label>Sales Visit Date OLD</label>
    <type>DateTime</type>
</CustomField>