force-app/main/default/objects/Opportunity/fields/Sales_Visit_Event__c.field-meta.xml
<CustomField>
    <fullName>Sales_Visit_Event__c</fullName>
    <label>Sales Visit Event OLD</label>
    <length>18</length>
    <type>Text</type>
</CustomField>