force-app/main/default/objects/Opportunity/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Opportunities (Sales Office)</relationshipLabel>
    <relationshipName>LumonSalesOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>