force-app/main/default/objects/Opportunity/fields/SalesPersonUser__c.field-meta.xml
<CustomField>
    <fullName>SalesPersonUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LumonOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>