force-app/main/default/objects/Opportunity/fields/SalesUser__c.field-meta.xml
<CustomField>
    <fullName>SalesUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesUserOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>