force-app/main/default/objects/Opportunity/fields/Scheduling_base_data_filled__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_base_data_filled__c</fullName>
    <description>The field is checked when base data for installation is filled in</description>
    <formula>NOT( ISBLANK( Installation_Address__c ) ) &amp;&amp; 
NOT( ISBLANK( Delivery_Date__c  ) ) &amp;&amp; 
NOT( ISBLANK(   Installation_Time__c    ) ) &amp;&amp;
NOT (ISBLANK ( Count_Opportunity_Products__c ))</formula>
    <label>Scheduling base data filled OLD</label>
    <type>Checkbox</type>
</CustomField>