force-app/main/default/objects/Opportunity/fields/Seals_between_panes__c.field-meta.xml
<CustomField>
    <fullName>Seals_between_panes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify seals needed between panes
LATE/ post-Pilot consider moving to building</description>
    <label>Seals between panes</label>
    <type>Checkbox</type>
</CustomField>