force-app/main/default/objects/Opportunity/fields/Service_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Service_Attribute__c</fullName>
    <formula>SUBSTITUTE(TRIM(
IF(NOT(ISBLANK(Owner.Profit_Center_Attribute__c )),Owner.Profit_Center_Attribute__c,&apos;&apos;)
+IF(NOT(ISBLANK(Business_Type_Attribute__c )),Business_Type_Attribute__c,&apos;&apos;)
),&apos; &apos;, &apos;_&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Attribute OLD</label>
    <type>Text</type>
</CustomField>