force-app/main/default/objects/Opportunity/fields/ServiceAttribute__c.field-meta.xml
<CustomField>
    <fullName>ServiceAttribute__c</fullName>
    <formula>/* Field Service Area Oppty Field*/ 
/* Service Attribute LSU_FI_45130_1000 */
SUBSTITUTE(
	TRIM(
		/* 1. Organization - LSU */
		IF(NOT(ISBLANK(OrganizationAttribute__c)),
			OrganizationAttribute__c ,&apos;&apos;)
		/* 2. Country - LSU_FI */
		+IF(AND(NOT(ISBLANK(CountryAttribute__c)),NOT(ISBLANK(OrganizationAttribute__c ))),
			&apos;_&apos;+CountryAttribute__c ,&apos;&apos;)
		+IF(AND(NOT(ISBLANK(CountryAttribute__c )),ISBLANK(OrganizationAttribute__c )),
			CountryAttribute__c ,&apos;&apos;)
		/* 3. District/Sales Area - LSU_FI_South */
		+IF(AND(NOT(ISBLANK(DistrictAttribute__c )),NOT(ISBLANK(CountryAttribute__c )),ISBLANK(ProfitCenterAttribute__c ),ISBLANK(CustomerSegmentAttribute__c )),
			&apos;_&apos;+ SUBSTITUTE(DistrictAttribute__c, CountryAttribute__c+&apos;_&apos;, &apos;&apos;) ,&apos;&apos;)
		/* 4. Profit Center - LSU_FI_402 */
		+IF(AND(NOT(ISBLANK(ProfitCenterAttribute__c )),ISBLANK(CustomerSegmentAttribute__c )),
			&apos;_&apos;+ProfitCenterAttribute__c ,&apos;&apos;)
			
		/* 5. Office - LSU_FI_402_12345 */
		+IF(NOT(ISBLANK(OfficeAttribute__c)),
			&apos;_&apos;+SUBSTITUTE(OfficeAttribute__c , CountryAttribute__c+&apos;-&apos;, &apos;&apos;),&apos;&apos;)
		/* 6. Business Type - LSU_FI_402_12345_1 */
		+IF(AND(NOT(ISBLANK( BusinessTypeAttribute__c )),ISBLANK(CustomerSegmentAttribute__c ),ISBLANK(CustomerSegmentAttribute__c )),
			&apos;_&apos;+BusinessTypeAttribute__c ,&apos;&apos;)
		/* 7. Customer Segment - LSU_FI_402_12345_1100 */
		+IF(NOT(ISBLANK(CustomerSegmentAttribute__c)),
			&apos;_&apos;+CustomerSegmentAttribute__c ,&apos;&apos;)
	),
&apos; &apos;, &apos;_&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Attribute</label>
    <type>Text</type>
</CustomField>