force-app/main/default/objects/Opportunity/fields/ServicesOffice__c.field-meta.xml
<CustomField>
    <fullName>ServicesOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Service Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Opportunities (Service Office)</relationshipLabel>
    <relationshipName>ServicesOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>