force-app/main/default/objects/Opportunity/fields/ServicesUser__c.field-meta.xml
<CustomField>
    <fullName>ServicesUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServicesOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>