force-app/main/default/objects/Opportunity/fields/ShipToInstall__c.field-meta.xml
<CustomField>
    <fullName>ShipToInstall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Shipping Address</label>
    <type>Checkbox</type>
</CustomField>