force-app/main/default/objects/Opportunity/fields/Signed_1st_reminder_sent__c.field-meta.xml
<CustomField>
    <fullName>Signed_1st_reminder_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is stamped when 1st reminder is send and prevent sending more of first reminders</description>
    <label>Signed 1st reminder sent</label>
    <type>Checkbox</type>
</CustomField>