force-app/main/default/objects/Opportunity/fields/Signing_Status__c.field-meta.xml
<CustomField>
    <fullName>Signing_Status__c</fullName>
    <formula>TEXT(Contract.Signing_status__c)</formula>
    <label>Signing Status</label>
    <type>Text</type>
</CustomField>