force-app/main/default/objects/Opportunity/fields/Snowload__c.field-meta.xml
<CustomField>
    <fullName>Snowload__c</fullName>
    <inlineHelpText>Indication of the Snowload at the Building Location</inlineHelpText>
    <label>Snowload</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>