force-app/main/default/objects/Opportunity/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <description>Contains special instructions regarding the installation from Sales Person. Is shown on Work Order for the Installer.</description>
    <inlineHelpText>Special instructions to the Installer (max. 255 characters).</inlineHelpText>
    <label>Special Instructions OLD</label>
    <type>TextArea</type>
</CustomField>