force-app/main/default/objects/Opportunity/fields/Special_Order_Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_Case_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is marked when the Special Order Case has been closed.</description>
    <inlineHelpText>Please mark this field when the Special Order Case has been closed.</inlineHelpText>
    <label>Special Order Case Closed OLD</label>
    <type>Checkbox</type>
</CustomField>