force-app/main/default/objects/Opportunity/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <formula>Installation_Address__Street__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address OLD</label>
    <type>Text</type>
</CustomField>