force-app/main/default/objects/Opportunity/fields/Structural_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Structural_Analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Structural Analysis OLD</label>
    <referenceTo>Structural_Analysis__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>