force-app/main/default/objects/Opportunity/fields/Structural_Information_Filled__c.field-meta.xml
<CustomField>
    <fullName>Structural_Information_Filled__c</fullName>
    <description>Field used on page layout visibility rules</description>
    <formula>NOT( ISBLANK(TEXT(Terrain_Type__c)) )
&amp;&amp;
NOT (ISBLANK ( Wind_Speed__c ))
&amp;&amp;
NOT (ISBLANK (  Snowload__c  ))
&amp;&amp;
NOT (ISBLANK (  Building_Height__c ))
&amp;&amp;
NOT (ISBLANK (  Wind_Pressure__c  ))
&amp;&amp;
NOT (ISBLANK (  Combined_load__c  ))</formula>
    <label>Structural Information Filled OLD</label>
    <type>Checkbox</type>
</CustomField>