force-app/main/default/objects/Opportunity/fields/Sub_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project_Code__c</fullName>
    <label>Sub Project Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>