force-app/main/default/objects/Opportunity/fields/Sub_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project_Number__c</fullName>
    <inlineHelpText>The Sub Project Number</inlineHelpText>
    <label>Sub Project Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>