force-app/main/default/objects/Opportunity/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The allocated Installation Manager</description>
    <inlineHelpText>The allocated Installation Manager</inlineHelpText>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>