force-app/main/default/objects/Opportunity/fields/Tax_Total__c.field-meta.xml
<CustomField>
    <fullName>Tax_Total__c</fullName>
    <description>Total Tax</description>
    <formula>Gross_Total_Price__c *  Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Tax</inlineHelpText>
    <label>Tax Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>