force-app/main/default/objects/Opportunity/fields/Terms_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Payment__c</fullName>
    <label>Terms of Payment OLD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 days net</fullName>
            </value>
            <value>
                <fullName>07 days net</fullName>
                <default>true</default>
                <label>07 days net</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>