force-app/main/default/objects/Opportunity/fields/Terrain_Type__c.field-meta.xml
<CustomField>
    <fullName>Terrain_Type__c</fullName>
    <inlineHelpText>Classification of the Terrain Type
0 - Sea, coastal exposed to the open sea
I - Lakes or area with negligible vegetation
II - Area with low vegetation such as grass and isolated obstacles (trees, buildings) with separations of at least 20 obstacle heights
III - Area with regular cover of vegetation or buildings or with isolated obstacles with separations of maximum 20 obstacle heights (such as villages, suburban terrain, forest)
IV - Area in which at least 15 % of surface is cove</inlineHelpText>
    <label>Terrain Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Terrain_Types</valueSetName>
    </valueSet>
</CustomField>