force-app/main/default/objects/Opportunity/fields/Territory_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Territory_Attribute__c</fullName>
    <description>Attribute to Identify the Sales Area (based on Account Territory)</description>
    <formula>Territory2.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Attribute to Identify the Sales Area</inlineHelpText>
    <label>Territory Attribute</label>
    <type>Text</type>
</CustomField>