force-app/main/default/objects/Opportunity/fields/VAT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percentage__c</fullName>
    <inlineHelpText>The VAT Percentage to be used in Pricing</inlineHelpText>
    <label>VAT Percentage OLD</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>