force-app/main/default/objects/Opportunity/fields/Wind_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Wind_Pressure__c</fullName>
    <description>Wind pressure value set as default country parameter</description>
    <label>Wind Pressure DEL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>