force-app/main/default/objects/Opportunity/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <inlineHelpText>Indication of the Windspeed at the Building Location</inlineHelpText>
    <label>Wind Speed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>