force-app/main/default/objects/Opportunity/fields/X2nd_Measurement_Completed__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Measurement_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is marked when the 2nd Measurement has been completed.</description>
    <inlineHelpText>Please mark this field when the 2nd Measurement has been completed.</inlineHelpText>
    <label>2nd Measurement Completed DEL</label>
    <type>Checkbox</type>
</CustomField>