force-app/main/default/objects/Opportunity/recordTypes/B2B_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>B2B_Opportunity</fullName>
    <active>true</active>
    <businessProcess>B2B Sales Process</businessProcess>
    <description>This is record type for B2B opportunities (Projects and Resellers)</description>
    <label>B2B Opportunity</label>
</RecordType>