force-app/main/default/objects/Opportunity/recordTypes/B2C_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>B2C_Opportunity</fullName>
    <active>true</active>
    <businessProcess>B2C Sales Process</businessProcess>
    <description>This is record type for B2C opportunities (Consumers)</description>
    <label>B2C Opportunity</label>
</RecordType>