force-app/main/default/objects/Opportunity/validationRules/Data_needed_before_opportunity_closure.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_needed_before_opportunity_closure</fullName>
    <active>true</active>
    <description>Certain information needs to exist before opportunity can be closed: confirmed installation date, associated contract signed. Make also sure that your order has products.</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false
&amp;&amp; Account.IsPersonAccount     
&amp;&amp; ISPICKVAL(StageName, &quot;closed won&quot;) 
&amp;&amp; ISCHANGED(StageName)
&amp;&amp; (Contract_Signed__c = false
|| ISBLANK(Order__r.Id)
|| Order__r.Count_of_Order_Products__c  &lt;=  0 )</errorConditionFormula>
    <errorMessage>Please confirm installation time before closing opportunity, make sure associated contract is signed and ensure your order has products.</errorMessage>
</ValidationRule>