force-app/main/default/objects/Opportunity/validationRules/Payment_Plan_Before_Contract_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Plan_Before_Contract_Sent</fullName>
    <active>true</active>
    <description>Payment Plan is required before moving to contract sent stage.</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false     
&amp;&amp; ISPICKVAL(StageName ,&apos;Contract Sent&apos;)
&amp;&amp; ISPICKVAL( Payment_Plan__c, &apos;&apos; )</errorConditionFormula>
    <errorMessage>Please select a Payment Plan before saving this Opportunity.</errorMessage>
</ValidationRule>